@@ -21,6 +21,7 @@ Job: "ttH2015"
   SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
+  SystLarge: 0.10
 %   CorrelationThreshold: 0.20
   HistoChecks: NOCRASH
   SplitHistoFiles: TRUE   % set this in order to have separated .root files in Histograms/ for different regions
@@ -297,7 +298,7 @@ Systematic: "tt_Rad_HiLow"
 %   ReferenceSample: ttbar_pyt8
   Smoothing: 40
   Symmetrisation: TWOSIDED
-  Decorrelate: SHAPEACC
+%   Decorrelate: SHAPEACC
 
 % % Systematic: "tt_Shower"
 % %   Title: "t#bar{t} Parton Shower"
